--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="about">
             <div class="about__width">
                 <h2>O mně</h2>
-                <div class="ExpandMoreContent" id="ShowMoreContent1">
+                <div class="ExpandMoreContent" id="ShowMoreContent">
                     <p>Práce s přírodními materiály mě zajímala odjakživa, a proto jsem se rozhodla
                         z tohoto koníčku udělat i své povolání. Takto jednoduše vznikla firma SABA šperky,
                         sídlící v Hrádku nad Nisou na severu Čech. Šperky vyrábím ručně a každý kus je tak originál.
@@ -71,10 +71,9 @@
                 </div>
             </div>
             <div class="ExpandMoreHolder">
-                <span expand-more data-hidetext="Méně" data-showtext="Více" data-target="ShowMoreContent1"
+                <span expand-more data-hidetext="Méně" data-showtext="Více" data-target="ShowMoreContent"
                     class="btn-expand-more">Více</span>
             </div>
-            <i class="fa-solid fa-chevron-down"></i>
         </div>
         <div class="gallery">
             <figure class="gallery__hover">
