--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                             class="fa-solid fa-circle-chevron-right"></i></button>
                 </div>
             </div>
-            <i class="fa-solid fa-angles-down"></i>
-            <a class="button" href="#">Nakupujte zde</a>
+        </div>
+            <div class="downbutton">
+                <i class="fa-solid fa-angles-down"></i>
+                <a class="button" href="#">Nakupujte zde</a>
+            </div>
     </header>
     <main>
         <div class="about">
