--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 <div class="ExpandMoreContent" id="ShowMoreContent">
                     <p>Práce s přírodními materiály mě zajímala odjakživa, a proto jsem se rozhodla
                         z tohoto koníčku udělat i své povolání. Takto jednoduše vznikla firma SABA šperky,
-                        sídlící v Hrádku nad Nisou na severu Čech. Šperky vyrábím ručně a každý kus je tak originál.
-                        Samozřejmostí je samozřejmě také jejich výroba z kvalitních přírodních surovin, především ze
+                        sídlící v Hrádku nad Nisou na severu Čech.</br>Šperky vyrábím ručně a každý kus je tak originál.
+                        Samozřejmostí je jejich výroba z kvalitních přírodních surovin, především ze
                         dřeva,
-                        minerálů či hornin, které jsou skvělou alternativou k tradičním materiálům jako jsou kovy či
+                        minerálů či hornin, které jsou vhodnou alternativou k tradičním materiálům jako jsou kovy či
                         plasty.
-                        Šperky vytvářím nejen s citem pro jejich vzhled, ale také s ohledem na jejich odolnost.
-                        Největšími přednostmi šperků je jejich nestárnoucí vzhled pro všechny příležitosti,
+                    </br>Šperky vytvářím nejen s citem pro jejich vzhled, ale také s ohledem na jejich odolnost.
+                </br>Jejich největšími přednostmi šperků jsou nestárnoucí vzhled, který je dělá vhodnými pro všechny příležitosti,
                         přívětivé ceny a možnost jejich objednání na zakázku a podle Vašich představ. </p>
                 </div>
             </div>
