--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <figure class="gallery__hover">
                 <img src="./images/nahrdelnik-vyska.jpg" alt="Skleněný náhrdelník ve tvaru lahve s růženínem uvnitř">
                 <figcaption>
-                    <div class="popis">Skleněný náhrdelník ve tvaru lahve naplněný růženínem</div>
+                    <div class="popis">Náhrdelník ve tvaru lahvičky naplněný růženínem</div>
                     <a class="kosik" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                 </figcaption>
             </figure>
@@ -110,7 +110,7 @@
             <figure class="gallery__hover">
                 <img src="./images/zajic.jpg" alt="Dřevěný náhrdelník ve tvaru zajíce">
                 <figcaption>
-                    <div class="popis">Dřevěný náhrdelník ve tvaru zajíce</div>
+                    <div class="popis">Náhrdelník z jabloňového dřeva ve tvaru zajíce</div>
                     <a class="kosik" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                 </figcaption>
             </figure>
