--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         minerálů či hornin, které jsou vhodnou alternativou k tradičním materiálům jako jsou kovy či
                         plasty.
                     </br>Šperky vytvářím nejen s citem pro jejich vzhled, ale také s ohledem na jejich odolnost.
-                </br>Jejich největšími přednostmi jsou nestárnoucí vzhled, který je dělá vhodnými na nošení pro všechny příležitosti,
+                </br>Největšími přednostmi mnou nabízených šperků jsou nestárnoucí vzhled a design, který je dělá vhodnými na nošení pro všechny příležitosti,
                         přívětivé ceny a možnost jejich objednání na zakázku, podle Vašich představ. </p>
                 </div>
             </div>
