--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lexend+Giga:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/%40glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="node_modules/glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <script src="expand_more.js"></script>
